[ ass 2 ] README: short build instructions

--- a/src/agda/Makefile
+++ b/src/agda/Makefile
@@ -14,7 +14,7 @@ lab2 : lab2.agda $(agdafiles)
 # Otherwise infinite loop here...
 
 test : lab2
-	../haskell/run-testsuite.sh
+	./run-testsuite.sh
 
 
 test-local : lab2
