[ haskell ] Print.hs in Makefile; Semigroup instance

--- a/src/haskell/Makefile
+++ b/src/haskell/Makefile
@@ -13,7 +13,7 @@ testsuite : lab2
 lab2 : lab2.hs TypeChecker.hs Interpreter.hs CPP/Test
 	ghc --make lab2.hs -o lab2
 
-CPP/Test.hs CPP/Lex.x CPP/Layout.hs CPP/Par.y : CPP.cf
+CPP/Test.hs CPP/Lex.x CPP/Par.y CPP/Abs.hs CPP/Print.hs : CPP.cf
 	bnfc --haskell -d $<
 
 CPP/Par.hs: CPP/Par.y
