--- a/.gitignore
+++ b/.gitignore
@@ -13,14 +13,16 @@
 *.toc
 *.vrb
 a.out
-lab2
 Bug*.agda
 MAlonzo
 dist-newstyle
 /src/haskell/CPP/
+/src/haskell/lab2
+/src/agda/lab2
 /src/agda/lab3
 /src/agda/test/*.class
 /src/agda/*.j
 /types20/EasyChair3.5/easychair.bib
 /types20/EasyChair3.5/throneEC.jpg
 /types20/EasyChair3.5/easychair.tex
+/src/plt-agda.cabal
