--- a/src/agda/Makefile
+++ b/src/agda/Makefile
@@ -1,6 +1,6 @@
 # Makefile for Agda implementation of PLT labs 2 & 3
 
-agda=agda
+agda=agda-2.6.4
 agdafiles=Library.agda ../haskell/CPP/AST.agda ../haskell/CPP/Parser.agda WellTypedSyntax.agda TypeChecker.agda Value.agda Evaluation.agda Interpreter.agda Compiler/FlowChart.agda Compiler/BasicBlocks.agda Compiler/BB/ToJasmin.agda
 hsfiles=MAlonzo/Code/TypeChecker.hs
 ghcflags=--ghc-flag=-i../haskell --ghc-flag=-Wwarn
