Build with stack

--- a/.gitignore
+++ b/.gitignore
@@ -13,16 +13,28 @@
 *.toc
 *.vrb
 a.out
+.DS_Store
 Bug*.agda
-MAlonzo
-dist-newstyle
+stack*.yaml.lock
+
+MAlonzo/
+dist-newstyle/
+.stack-work/
+html/
+
 /src/haskell/CPP/
 /src/haskell/lab2
 /src/agda/lab2
 /src/agda/lab3
 /src/agda/test/*.class
-/src/agda/*.j
+/src/**/*.j
+/src/plt-agda.cabal
+
 /types20/EasyChair3.5/easychair.bib
 /types20/EasyChair3.5/throneEC.jpg
 /types20/EasyChair3.5/easychair.tex
-/src/plt-agda.cabal
+/types20/agda.sty
+/types20/all.bib
+/types20/medium.bib
+/types20/short.bib
+
